--- a/eks-deploy-from-ecr.yaml
+++ b/eks-deploy-from-ecr.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: my-python-app
-        image: 517656224016.dkr.ecr.us-east-2.amazonaws.com/juliet-docker-repo
+        image: juliethub
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
