--- a/eks-deploy-from-ecr.yaml
+++ b/eks-deploy-from-ecr.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: juliethub
+  name: my-python-app-deployment
 spec:
   replicas: 5
   selector:
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: my-python-app
-        image: juliethub
+        image: 211223789150.dkr.ecr.us-east-1.amazonaws.com/my-python-repo
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
